<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    tools:showIn="navigation_view">

    <group android:checkableBehavior="single">
        <item
            android:id="@+id/nav_main"
            android:icon="@drawable/ic_main"
            android:title="@string/menu_main" />
        <item
            android:id="@+id/nav_account"
            android:icon="@drawable/ic_account"
            android:title="@string/menu_account" />
        <item
            android:id="@+id/nav_documents"
            android:icon="@drawable/ic_documents"
            android:title="@string/menu_documents" />
        <item
            android:id="@+id/nav_online_journal"
            android:icon="@drawable/ic_online_journal"
            android:title="@string/menu_online_journal" />
        <item
            android:id="@+id/nav_actions"
            android:icon="@drawable/ic_actions"
            android:title="@string/menu_actions" />
    </group>
</menu>